--- a/style.css
+++ b/style.css
@@ -1,7 +1,41 @@
+
+
+
+@media screen and (max-width: 62.5rem) {
+    
+}
+
+@font-face {
+    font-family: myFirstFont;
+    font-family: 'Roboto';
+    src: local('Roboto'), url('https://roboto-webfont.googlecode.com/files/Roboto-Regular-webfont.woff') format('woff');
+    font-style: normal;
+}
+
+* {
+    font-family: myFirstFont;
+}
+
+
 .container{
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .section{
     flex: 1;
+    justify-content: center;
+    align-items: center;
 }
+
+.sectionText{
+padding-left: 10rem ;
+}
+
+.image{
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+} 
