--- a/style.css
+++ b/style.css
@@ -13,19 +13,38 @@
     flex: 1;
     justify-content: center;
     align-items: center;
+    margin-right: 2rem;
 }
 
-.sectionText{
+.sectionInput{
 padding-left: 10rem ;
+max-width: 24.25rem;
 }
 
 .image{
     width: 100%;
     object-fit: cover;
     object-position: center;
-} 
+    max-width: 40rem;
+}
 
-@media (min-width: 62.51rem) {
+.forgetpass{
+    margin-top: 0.5rem;
+    float: right;
+}
+
+.input{
+    padding-left: 0.8rem;
+    height: 2rem;
+    border-width: 0.1rem;
+    border-radius: 0.5rem;
+    max-width: 24.25rem;
+    width: 100%;
+    font-family: roboto;
+    background-color: #D4D7E3;
+}
+
+@media (min-width: 62.5000001rem) {
 .desktop{
     display: none;
 }
@@ -41,10 +60,16 @@ padding-left: 10rem ;
     }
     
     .image{
-        flex: 1;
+        width: 100%;
+        object-fit:cover;
+        object-position: center;
 
     } 
     .mobile{
         display: none;
     }
+    .sectionInput{
+        padding-left: 0rem ;
+        }
+
 }
