--- a/style.css
+++ b/style.css
@@ -2,74 +2,114 @@
     font-family: roboto;
 }
 
-.container{
+body {
+    margin: 0;
+    padding: 0;
+    display: grid;
+    place-content: center;
+    min-height: 100vh;
+}
+
+.container {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-.section{
+.section {
     flex: 1;
     justify-content: center;
     align-items: center;
     margin-right: 2rem;
+    padding-right: 1rem;
 }
 
-.sectionInput{
-padding-left: 10rem ;
-max-width: 24.25rem;
+.sectionInput {
+    padding-left: 10rem;
+    max-width: 24.25rem;
 }
 
-.image{
+.image {
     width: 100%;
     object-fit: cover;
     object-position: center;
     max-width: 40rem;
 }
 
-.forgetpass{
+.pass{
     margin-top: 0.5rem;
-    float: right;
 }
 
-.input{
+.forgetpass {
+    margin-top: 0.5rem;
+    margin-bottom: 0rem;
+    text-align: end;
+}
+
+.forgetpassText {
+    color: #1E4AE9;
+}
+
+.input {
     padding-left: 0.8rem;
     height: 2rem;
-    border-width: 0.1rem;
+    border: 1px solid #D4D7E3; 
     border-radius: 0.5rem;
     max-width: 24.25rem;
-    width: 100%;
+    width: 95%;
     font-family: roboto;
-    background-color: #D4D7E3;
+    background-color: #F7FBFF;
+}
+
+.button {
+    border-radius: 0.8rem;
+    width: 100%;
+    min-width: 20rem;
+    min-height: 2.5rem;
+    max-width: 24.25rem;
+    background-color: #162D3A;
+    color: #ffffff;
+}
+
+.textSignUp{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 @media (min-width: 62.5000001rem) {
-.desktop{
-    display: none;
-}
+    .desktop {
+        display: none;
+    }
 }
 
 
 @media (max-width: 62.5rem) {
-    .container{
+    body {
+        min-height: 70vh;
+    }
+
+    .container {
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
     }
-    
-    .image{
+
+    .image {
         width: 100%;
-        object-fit:cover;
+        object-fit: cover;
         object-position: center;
 
-    } 
-    .mobile{
+    }
+
+    .mobile {
         display: none;
     }
-    .sectionInput{
-        padding-left: 0rem ;
-        }
+
+    .sectionInput {
+        padding-left: 0rem;
+    }
 
 }
