--- a/style.css
+++ b/style.css
@@ -47,8 +47,9 @@ body {
     text-align: end;
 }
 
-.forgetpassText {
+.textWithLink {
     color: #1E4AE9;
+    text-decoration:none
 }
 
 .input {
