--- a/style.css
+++ b/style.css
@@ -9,6 +9,17 @@ body {
     place-content: center;
     min-height: 100vh;
 }
+a{
+    font-size: 1em;
+}
+
+footer{
+    color:#959CB6;
+    text-transform: uppercase;
+    margin-top: 0.8rem;
+    bottom: 0rem;
+    text-align: center;
+}
 
 .container {
     display: flex;
@@ -49,7 +60,8 @@ body {
 
 .textWithLink {
     color: #1E4AE9;
-    text-decoration:none
+    text-decoration:none;
+    
 }
 
 .input {
